xm/theme/browser/stylesheets/main.css
/* Stylesheet for the 'eXtremeManagement' Plone theme */

.headerTitle {
    position: relative;
    bottom: 20px;
}

.searchGadgetFix {
    float: left;
    margin: 0;
    padding: 0 10px;
    position: relative;
    top: 3px;
}
 
  /*search- icon fix*/
.searchIcon{
    float: left;
    background: transparent url(++resource++xm.theme.images/search_icon.gif) 0 4px no-repeat;
    width: 14px;
    height: 26px;
}
  
#portal-header {
    background: transparent url(++resource++xm.theme.images/portal-header_bg.gif) repeat-x 0 bottom;
    height: 62px;
    position: relative;
    z-index: 3;
}

#project-header {
    position: absolute;
    z-index: 4;
    top: 20px;
}

h1#project-header a{
    background-color: transparent;
/*    background: url(++resource++xm.theme.images/logo-xm.gif) no-repeat scroll 9px 1px; */
    color: #21BEE8;
    font-size: 120%;
    font-weight: bold;
    padding-left: 40px;
    white-space: nowrap;
}

#portal-globalnav #portaltab-Iterations {
    color:#343434;
    margin-right: 0.5em;
}

/* *** Start submenus *** */
/*LS- position/placement fix project-submenu*/

#my-projects-menu {
    z-index: 3;
}

#my-projects-menu .project-submenu {
    position: relative !important;
    z-index: 4;
    top: 0 !important;
}

#my-projects-menu .project-submenu ul {
  background-color: transparent;
  border: none !important;
  text-indent: 7px;
}

.project-submenu li a {
  border-width: 0;
  margin: 0;
  padding-right: 10px;
}

.project-submenu li.selected {
  border-width: 0;
  margin: 0;
  padding: 0 5px 0 5px;
  color: #FFFFFF;
  background-color: #8CACBB;
}

.project-submenu li.selected a {
  color: #FFFFFF;
  background-color: #8CACBB;
  margin: 0;
  padding: 0;
}

table .IterationTitle th {
}

table .IterationTitle a {
  color: #000;
}

#story-listing a:hover {
  text-decoration: underline;
}

.progress_percentage span {
  display: none;
}

#story-listing #task-list-for-story {
  font-size: 100%;
}

#story-listing .StatusOfStories th {
}

#story-listing .storyHeader {
  width: 50%;
}

#story-listing .statusHeader {
  width: 10%;
}

#story-listing .initEstimateHeader {
  width: 10%;  
}

#story-listing .tasksEstimateHeader {
  width: 10%;
}

#story-listing .actualHoursHeader {
  width: 10%;
}

#story-listing .totalOfProject th {
  text-align: right;
  font-weight: bold;
  text-transform: none;
  background-color: #EDEBEB;
  padding: 6px 3px;
  font-size: 110%;
}

table.employees-overview td {
  padding: 4px;
  white-space: nowrap;
}

.employees-overview .name-employee {
  white-space: nowrap;
}

/* LS-  dashboard - start*/
#dashboard-actions {
    clear: left;
    float: right;
}

#dashboard-actions ul{
    margin: 0;
    list-style-image: none;
    list-style-type: none;
}

#dashboard-actions li {
    display: inline;
    margin-right: 1em;
}

.heading_dashboard {
    clear: both;
}

/* LS-  dashboard - finish*/

